--- a/sections/05_practical.tex
+++ b/sections/05_practical.tex
@@ -8,7 +8,7 @@ For classification models, a hit is simply a correct label prediction. A hit by 
 The Python programming language (version 3.7.5) was used for developing the models. For the machine learning methods and \ac{mlp} models, the \texttt{scikit-learn} package (version 0.22.1) was put to use. The \ac{cnn}s were developed using \texttt{Keras} (version 2.3.1) and \texttt{tensorflow} (version 1.15.0).
 
 \subsection{Polynomial Regression on Key Values}
-The first model presented is a supervised machine learning method using the \texttt{PolynomialFeatures} class from \texttt{scikit-learn}, which is based on the polynomial regression method as described in Section \ref{sec:polyreg}.
+The first model presented is a supervised machine learning method implemented with the \texttt{PolynomialFeatures} class from \texttt{scikit-learn}, which is based on the polynomial regression method as described in Section \ref{sec:polyreg}.
 
 - supervised ML method
 
