--- a/sections/06_discussion.tex
+++ b/sections/06_discussion.tex
@@ -1,1 +1,4 @@
 \section{Discussion}
+- InceptionTime complexity is practically linear (cite fawaz): doubling TS length would only double computation time but could offer much more information
+
+- Shape of descent could be fixed to a) include more time points and b) align the fluctuations.
