--- a/sections/abbrv.tex
+++ b/sections/abbrv.tex
@@ -71,7 +71,7 @@
 }
 
 \DeclareAcronym{fea}{
-	short 	= 	FE,
+	short 	= 	FEA,
 	long 	= 	Finite Element Analysis,
 	class	= 	Method
 }
@@ -145,6 +145,12 @@
 \DeclareAcronym{relu}{
 	short	=	ReLU,
 	long	=	Rectified Linear Unit,
+	class	=	Machine learning
+}
+
+\DeclareAcronym{apca}{
+	short	=	APCA,
+	long	=	Adaptive Piecewise Constant Approximation,
 	class	=	Machine learning
 }
 
