--- a/sources.bib
+++ b/sources.bib
@@ -716,3 +716,13 @@ The proposed approach is an interesting addition to existing learning tools for 
 	author = {Palmgren, A.},
 	year = {1924}
 }
+
+@article{keogh_locally_2002,
+	title = {Locally {Adaptive} {Dimensionality} {Reduction} for {Indexing} {Large} {Time} {Series} {Databases}},
+	abstract = {Similarity search in large time series databases has attracted much research interest recently. It is a difficult problem because of the typically high dimensionality of the data.. The most promising solutions involve performing dimensionality reduction on the data, then indexing the reduced data with a multidimensional index structure. Many dimensionality reduction techniques have been proposed, including Singular Value Decomposition (SVD), the Discrete Fourier transform (DFT), and the Discrete Wavelet Transform (DWT). In this work we introduce a new dimensionality reduction technique which we call Adaptive Piecewise Constant Approximation (APCA). While previous techniques (e.g., SVD, DFT and DWT) choose a common representation for all the items in the database that minimizes the global reconstruction error, APCA approximates each time series by a set of constant value segments of varying lengths such that their individual reconstruction errors are minimal. We show how APCA can be indexed using a multidimensional index structure. We propose two distance measures in the indexed space that exploit the high fidelity of APCA for fast searching: a lower bounding Euclidean distance approximation, and a non-lower bounding, but very tight Euclidean distance approximation and show how they can support fast exact searching, and even faster approximate searching on the same index structure. We theoretically and empirically compare APCA to all the other techniques and demonstrate its superiority.},
+	language = {en},
+	author = {Keogh, Eamonn and Chakrabarti, Kaushik and Mehrotra, Sharad and Pazzani, Michael},
+	year = {2002},
+	pages = {12},
+	file = {Keogh et al. - Locally Adaptive Dimensionality Reduction for Inde.pdf:/home/samuelob/snap/zotero-snap/common/Zotero/storage/YMPQ5XYS/Keogh et al. - Locally Adaptive Dimensionality Reduction for Inde.pdf:application/pdf}
+}
