--- a/sections/04_data.tex
+++ b/sections/04_data.tex
@@ -131,7 +131,7 @@ With the flights in a uniform, downsampled representation, some characteristics 
 \paragraph{NH}
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{high_low_dmg/NH/f3_NH_high_low_dmg_500}
+    \includegraphics[width=\textwidth]{f3_NH_high_low_dmg_500}
     \caption{\label{fig:high_low_dmg_NH} Line plot showing NH from 500 flights, coloured according to their damage to feature 3. Red lines represent the 250 flights with the most damage to this feature, green the 250 with the least. All parameter values normalised.}
 \end{figure}
 
@@ -139,7 +139,7 @@ To create Figure \ref{fig:high_low_dmg_NH}, the flights were ordered by damage a
 
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{high_low_dmg/NH/f3_NH_high_low_dmg_500_dist_t7}
+    \includegraphics[width=\textwidth]{f3_NH_high_low_dmg_500_dist_t7}
     \caption{\label{fig:dmg_violin_NH} Violin plot showing the distribution of NH values at downsampled time point 7, coloured according damage to feature 3. All parameter values normalised.}
 \end{figure}
 
@@ -150,25 +150,25 @@ Figure \ref{fig:high_low_dmg_ALT} shows the sensitivity of feature 2 to altitude
 
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{high_low_dmg/ALT/f2_ALT_high_low_dmg_500}
+    \includegraphics[width=\textwidth]{f2_ALT_high_low_dmg_500}
     \caption{\label{fig:high_low_dmg_ALT} Line plot showing ALT from 500 flights, coloured according to their damage to feature 1. Red lines represent the 250 flights with the most damage to this feature, green the 250 with the least. All parameter values normalised.}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{high_low_dmg/ALT/f1_ALT_high_low_dmg_500_dist_t50}
+    \includegraphics[width=\textwidth]{f1_ALT_high_low_dmg_500_dist_t50}
     \caption{\label{fig:dmg_violin_ALT_f1} Violin plot showing the distribution of ALT values at downsampled time point 50 (middle of cruise phase), coloured according to damage to feature 1. All parameter values normalised.}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{high_low_dmg/ALT/f2_ALT_high_low_dmg_500_dist_t50}
+    \includegraphics[width=\textwidth]{f2_ALT_high_low_dmg_500_dist_t50}
     \caption{\label{fig:dmg_violin_ALT_f2} Violin plot showing the distribution of ALT values at downsampled time point 50 (middle of cruise phase), coloured according to damage to feature 2. All parameter values normalised.}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{high_low_dmg/ALT/f6_ALT_high_low_dmg_500_dist_t50}
+    \includegraphics[width=\textwidth]{f6_ALT_high_low_dmg_500_dist_t50}
     \caption{\label{fig:dmg_violin_ALT_f6} Violin plot showing the distribution of ALT values at downsampled time point 50 (middle of cruise phase), coloured according to damage to feature 6. All parameter values normalised.}
 \end{figure}
 
@@ -177,7 +177,7 @@ Figure \ref{fig:high_low_dmg_P30} shows P30 values for feature 5. As expected, a
 
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{high_low_dmg/P30/f5_P30_high_low_dmg_500}
+    \includegraphics[width=\textwidth]{f5_P30_high_low_dmg_500}
     \caption{\label{fig:high_low_dmg_P30} Line plot showing P30 from 500 flights, coloured according to their damage to feature 5. Red lines represent the 250 flights with the most damage to this feature, green the 250 with the least. All parameter values normalised.}
 \end{figure}
 
@@ -193,7 +193,7 @@ Figure \ref{fig:high_low_dmg_P30} shows P30 values for feature 5. As expected, a
 \paragraph{T30}
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{high_low_dmg/T30/f6_T30_high_low_dmg_500}
+    \includegraphics[width=\textwidth]{f6_T30_high_low_dmg_500}
     \caption{\label{fig:high_low_dmg_T30} Line plot showing T30 from 500 flights, coloured according to their damage to feature 6. Red lines represent the 250 flights with the most damage to this feature, green the 250 with the least. All parameter values normalised.}
 \end{figure}
 
